package Ejercicio_01;

public class Circulo extends Elipse {
    public Circulo() {
        super();
    }
}