package Ejercicio_01;
import java.util.List;

public class Cuadrado extends Rectangulo {
    public Cuadrado(List<Lado> lados) {
        super(lados);
    }
}