package Ejercicio_01;

public class Elipse extends FiguraBasica {
    public Elipse() {
        super();
    }
}