package Ejercicio_01;

public abstract class Figura {
}