package Ejercicio_01;

public abstract class FiguraBasica extends Figura {
}