package Ejercicio_01;
import java.util.List;

public class Rectangulo extends Cuadrilatero {
    public Rectangulo(List<Lado> lados) {
        super(lados);
    }
}